# fruit-images

./: .env  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
braeburn_apple/: admin.py  apps.py  models.py  permissions.py  serializer.py  set_superuser.py  tests.py  urls.py  views.py
braeburn_apple/migrations/: 0001_initial.py
fruit/: asgi.py  settings.py  urls.py  wsgi.py
